--- a/config/database.yml
+++ b/config/database.yml
@@ -62,6 +62,9 @@ development:
 test:
   <<: *default
   database: wanted_test
+  host: <%= ENV.fetch("POSTGRESQL_HOST") { "localhost" } %>
+  username: <%= ENV.fetch("POSTGRES_USER") { "postgres" } %>
+  password: <%= ENV["POSTGRES_PWD"] { "1234" } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
